# mcp-graph-mailer

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  auth_bootstrap.py  client.py  main.py  pyproject.toml  send_email.py  server.py
scripts/: manual_send.py
tests/: conftest.py  test_auth_status.py  test_email_flow.py  test_error_handling.py  test_graph_sending.py  test_mail_preview.py
tools/: auth.py  auth_status.py  drafts.py  email_flow.py  graph_client.py  mail_preview.py  test_tools.py
